--- a/PhotoTDS/pom.xml
+++ b/PhotoTDS/pom.xml
@@ -13,16 +13,11 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
-		<dependency>
-			<groupId>com.formdev</groupId>
-			<artifactId>flatlaf</artifactId>
-			<version>2.4</version>
-		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -30,12 +25,39 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/com.toedter/jcalendar -->
+		<!-- Dependencias para las vistas -->
+		<dependency>
+			<groupId>com.formdev</groupId>
+			<artifactId>flatlaf</artifactId>
+			<version>2.4</version>
+		</dependency>
+		
 		<dependency>
 		    <groupId>com.toedter</groupId>
 		    <artifactId>jcalendar</artifactId>
 		    <version>1.4</version>
 		</dependency>
-
+		
+		
+		<!-- Dependencias para la persistencia (JPAcon Hibernate y MySQL) -->
+		
+		<dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-core</artifactId>
+    		<version>5.6.10.Final</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>javax.persistence</groupId>
+    		<artifactId>javax.persistence-api</artifactId>
+    		<version>2.2</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.28</version>
+		</dependency>
 	</dependencies>
+	
 </project>
