--- a/PhotoTDS/.classpath
+++ b/PhotoTDS/.classpath
@@ -30,5 +30,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/ProyectoComponenteFotos-0.1.jar"/>
+	<classpathentry kind="lib" path="lib/Luz.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
