--- a/PhotoTDS/pom.xml
+++ b/PhotoTDS/pom.xml
@@ -59,6 +59,21 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.28</version>
 		</dependency>
+		
+		<!-- Dependencias para el usuario PREMIUM -->
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itextpdf</artifactId>
+		    <version>5.5.13.3</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>5.2.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
