--- a/PhotoTDS/pom.xml
+++ b/PhotoTDS/pom.xml
@@ -69,11 +69,9 @@
 		
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi</artifactId>
+		    <artifactId>poi-ooxml</artifactId>
 		    <version>5.2.3</version>
 		</dependency>
-
-
 	</dependencies>
 
 </project>
